# medias-wiki

./: .eleventy.js  .gitignore  LICENSE  README.md  package-lock.json  package.json
11ty_input/: a_propos.md  index.njk  toutes_les_relations.njk
11ty_input/_includes/: data_warning.njk  default_layout.njk  media.njk  proprietaire.njk  relations_graph.njk  wikidata.njk
11ty_input/assets/: 20-minutes-182-relations-graph.dot  6ter-113-relations-graph.dot  alain-weill-324-relations-graph.dot  allRelationsGraph.dot  altice-57-relations-graph.dot  altice-france-58-relations-graph.dot  altice-media-61-relations-graph.dot  amber-capital-330-relations-graph.dot  aol-27-relations-graph.dot  ariane-de-rothschild-307-relations-graph.dot  arnaud-lagardere-67-relations-graph.dot  arte-154-relations-graph.dot  arte-deutschland-tv-gmbh-156-relations-graph.dot  arte-france-136-relations-graph.dot  artemis-96-relations-graph.dot  association-guenter-holzmann-34-relations-graph.dot  (+292 more)
data/: entitiesRaw.tsv  entitiesWikidataIds.tsv  relationsRaw.tsv
exploration/: pyproject.toml  wikidata_ids.ipynb
intermediate_output/: allRelationsGraph.dot
lib/: augmentData.js  downloadFile.js  httpsGetJson.js  parseWikidata.js  readTsv.js  upsertJsonFile.js  utils.js
scripts/: buildDotFiles.js  buildFrontmatterImagesInfo.js  buildJsonsForEleventy.js  buildMarkdownContents.js  createMarkdownFiles.js  downloadTsvs.js  downloadWikidataImages.js  downloadWikidataJson.js  downloadWikipediaImages.js  reduceImageSizes.sh  relationsGraph.dot.njk  removeDuplicateWikipediaImages.js
(+469 files in other folders)
